[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "orchid-rag-chroma"
description = "ChromaDB vector-backend plugin for the Orchid AI framework"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.11"
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
keywords = ["ai", "agents", "rag", "chromadb", "vector"]
dependencies = [
    "orchid-ai>=1.8.2",
    "chromadb>=0.5.0",
]
dynamic = ["version"]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.25.0",
    "pytest-cov>=6.0",
    "ruff>=0.9.0",
]

[project.entry-points."orchid.vector_backends"]
chroma = "orchid_rag_chroma:_register"

[project.urls]
Homepage = "https://github.com/gadz82/orchid-rag-chroma"
Issues = "https://github.com/gadz82/orchid-rag-chroma/issues"

[tool.hatch.version]
path = "orchid_rag_chroma/__init__.py"

[tool.ruff]
target-version = "py311"
line-length = 120

[tool.pytest.ini_options]
asyncio_mode = "strict"
testpaths = ["tests"]
